--- a/configure.in
+++ b/configure.in
@@ -1,6 +1,6 @@
 dnl Process this file with autoconf to produce a configure script.
 
-AC_INIT(src/sim/omnetpp.h)
+AC_INIT(include/omnetpp.h)
 
 #
 # OMNeT++ version number
