--- a/configure.in
+++ b/configure.in
@@ -1,18 +1,54 @@
 dnl Process this file with autoconf to produce a configure script.
 
-AC_INIT(include/omnetpp.h)
+dnl
+dnl OPP_CHECK_LIB(      -- macro to check availability of a library
+dnl   $1: LIBRARY-NAME, -- descriptive name (only for printout)
+dnl   $2: HEADER,       -- optional: header file to #include
+dnl   $3: FUNCTION,     -- optional: function WITH ARG LIST, e.g. floor(0.5)
+dnl   $4: CFLAGS,       -- optional: compiler flags
+dnl   $5: LDFLAGS,      -- optional: linker flags
+dnl   $6: RESULT-VAR    -- will contain "yes" or "no"
+dnl   $7: ACTION-IF-FOUND
+dnl   $8: ACTION-IF-NOT-FOUND
+dnl )
+dnl
+AC_DEFUN(OPP_CHECK_LIB,[
+   save_CXXFLAGS=$CXXFLAGS
+   save_LIBS=$LIBS
+
+   CXXFLAGS="$4"
+   LIBS="$5"
+
+   AC_MSG_CHECKING(for $1 with CFLAGS="$4" LIBS="$5")
+
+   AC_LINK_IFELSE(
+     [AC_LANG_PROGRAM([[#include <$2>]], [[$3;]])],
+     [AC_MSG_RESULT(yes); $6=yes; $7],
+     [AC_MSG_RESULT(no); $6=no; $8])
+
+   CXXFLAGS=$save_CXXFLAGS
+   LIBS=$save_LIBS
+])
+
+
+#
+# Autoconf initialization
+#
+AC_INIT
+AC_CONFIG_SRCDIR(include/omnetpp.h)
+AC_LANG(C++)
 AC_CONFIG_AUX_DIR(src/utils)
 AC_CANONICAL_HOST()
+
 
 #
 # OMNeT++ version number
 #
 OMNETPP_VERSION=`cat Version | sed 's/omnetpp-//'`
 
-dnl -------------------------------------------------------------
-dnl  Set system/arch specific values
-dnl -------------------------------------------------------------
-dnl
+#
+#  Set system/arch specific values
+#
 case $host in
   sparc-sun-*)
     CFLAGS_ARCH="-DSUNSPARC"
@@ -59,65 +95,99 @@ OMNETPP_GNED_DIR="$OMNETPP_SRC_DIR/gned"
 OMNETPP_NEDC_DIR="$OMNETPP_SRC_DIR/nedc"
 OMNETPP_PLOVE_DIR="$OMNETPP_SRC_DIR/plove"
 
-#
-# Default values for other variables that come from configure.user.
-#
-build_shared_libs=if-not-cygwin
-#build_shared_libs=yes
-#build_shared_libs=no
-
-MPI_CFLAGS=
-MPI_LIBS=
-PVM_CFLAGS=
-PVM_LIBS=
-TK_CFLAGS=
-TK_LIBS=
-EXPAT_LIBS=
-LIBXML_LIBS=
-
-CFLAGS='-g'
-NEDCFLAGS='-Wno-unused'
-#CFLAGS='-g -Wall'
+CFLAGS='-g Wall'
 #CFLAGS='-O3 -DNDEBUG=1'
+NEDCFLAGS='-Wno-unused'
 
 LDFLAGS=
+
+AS="as"
+AR="ar cr"
+SHLIB_LD="$CXX -shared -fPIC"
+SHLIB_CFLAGS="-fPIC"
+NEDC="nedc"
+MSGC="opp_msgc"
+MAKEDEPEND="opp_makedep -Y --objdirtree"
+
+if test "$cygwin" = yes; then
+    MYPWD="$OMNETPP_SRC_DIR/utils/cygpwd"
+else
+    MYPWD="pwd"
+fi
+
+#
+# set default library suffixes. May be already defined
+# with system/arch specific values
+#
+A_LIB_SUFFIX=${A_LIB_SUFFIX:-".a"}
+SO_LIB_SUFFIX=${SO_LIB_SUFFIX:-".so"}
+
+if test "$cygwin" = yes; then
+    EXE_SUFFIX=".exe"
+else
+    EXE_SUFFIX=
+fi
+
 
 # total stack size on NT defaults to 128MB (will be added to LDFLAGS later):
 CYGWIN_STACKSIZE=134217728
 
+build_shared_libs=if-not-cygwin
+#build_shared_libs=yes
+#build_shared_libs=no
 
 
-dnl -------------------------------------------------------------
-dnl  Test macro to find a lib in one of the passed directories
-dnl -------------------------------------------------------------
-dnl
-dnl OPP_CHECK_LIB_WITHPATH(LIBNAME, FUNCTION, LOCATION-LIST,
-dnl    ACTION-IF-FOUND, ACTION-IF-NOT-FOUND, ADDITIONAL-LIBS)
-dnl
-AC_DEFUN(OPP_CHECK_LIB_WITHPATH,[
-save_LDFLAGS=$LDFLAGS
-save_LIBS=$LIBS
-LIBS="-l$1 $6"
-for lib_path_switch in "" $3; do
-  if test -n "$lib_path_switch"; then
-    AC_MSG_CHECKING(whether -l$1 is in $lib_path_switch)
-    lib_path_switch="-L$lib_path_switch"
-  else
-    AC_MSG_CHECKING(whether -l$1 is in linker path)
-  fi
-  LDFLAGS="$save_LDFLAGS $lib_path_switch"
-  AC_TRY_LINK([char $2();],$2(),
-              [AC_MSG_RESULT(yes);succ=yes;break],
-              [AC_MSG_RESULT(no);succ=no])
-done
-LDFLAGS=$save_LDFLAGS
-LIBS=$save_LIBS
-if test $succ = yes; then
-  :; $4
+#----------------------
+# Default flags for values for other variables that come from configure.user.
+#----------------------
+
+# for Tcl/Tk
+if test "$GCC" = "yes"; then
+   TK_CFLAGS="-fwritable-strings"
 else
-  :; $5
+   # other compilers use different flag, but we can't figure it out here
+   TK_CFLAGS=
 fi
-])
+TK_LIBS=
+
+# for MPI
+MPI_CFLAGS=
+MPI_LIBS=
+
+# for PVM
+if test -n "$PVM_ROOT"; then
+   PVM_CFLAGS="-I$PVM_ROOT/include"
+   PVM_LIBS="-L$PVM_ROOT/$PVM_ARCH/lib -lgpvm3 -lpvm3"
+else
+   PVM_CFLAGS=
+   PVM_LIBS="-lgpvm3 -lpvm3"
+fi
+
+# for Expat
+EXPAT_CFLAGS=
+EXPAT_LIBS=-lexpat
+
+# for LibXML
+LIBXML_CFLAGS=
+LIBXML_LIBS="-lxml2 -liconv"
+
+# for Akaroa
+AKAROA_CFLAGS=
+AKAROA_LIBS="-lakaroa"
+
+
+#----------------------
+# Read user settings (and allow override the above settings)
+#----------------------
+AC_MSG_NOTICE(-----------------------------------------------)
+AC_MSG_NOTICE(reading configure.user for your custom settings)
+AC_MSG_NOTICE(-----------------------------------------------)
+. ./configure.user
+
+#----------------------
+# set arch specific flags
+#----------------------
+CFLAGS="$CFLAGS $CFLAGS_ARCH"
 
 #----------------------
 # Checks for programs.
@@ -138,11 +208,11 @@ AC_ARG_VAR(DOXYGEN, The Doxygen documentation tool)
 AC_CHECK_PROG(DOXYGEN, doxygen, doxygen, not found)
 
 if test "$DOXYGEN" = "not found"; then
-   AC_MSG_WARN(doxygen is needed to create the OMNeT++ reference manual.
-   It is available from http://www.doxygen.org/)
+   AC_MSG_WARN(doxygen is needed to create the OMNeT++ API reference.)
+   AC_MSG_WARN(It is available from http://www.doxygen.org/)
 fi
 
-# perl is needed for experimental nedc message subclassing (see feature nedc-subcl)
+# perl is needed for experimental nedc message subclassing
 AC_ARG_VAR(PERL, The Perl interpreter)
 AC_CHECK_PROG(PERL, perl, perl, not found)
 
@@ -151,67 +221,9 @@ AC_ARG_VAR(XSLTPROC, A command line xslt processor)
 AC_CHECK_PROG(XSLTPROC, xsltproc, xsltproc, not found)
 
 if test "$XSLTPROC" = "not found"; then
-   AC_MSG_WARN(xsltproc is needed for opp_neddoc
-   You can get the sources from http://xmlsoft.org/XSLT/)
+   AC_MSG_WARN(xsltproc is needed for opp_neddoc.)
+   AC_MSG_WARN(You can get it from http://xmlsoft.org/XSLT/)
 fi
-
-# FIXME: the following lines will need some check
-AS="as"
-AR="ar cr"
-SHLIB_LD="$CXX -shared -fPIC"
-SHLIB_CFLAGS="-fPIC"
-NEDC="nedc"
-MSGC="opp_msgc"
-MAKEDEPEND="opp_makedep -Y --objdirtree"
-
-case "$CXX" in
-   "cxx") # Tru64 machine
-      CXXLIB=cxx
-   ;;
-   *) # GNU C++ ?
-      CXXLIB=stdc++
-   ;;
-esac
-
-if test "$cygwin" = yes; then
-    MYPWD="$OMNETPP_SRC_DIR/utils/cygpwd"
-else
-    MYPWD=pwd
-fi
-
-#
-# set default library suffixes. May be already defined
-# with system/arch specific values
-#
-A_LIB_SUFFIX=${A_LIB_SUFFIX:-".a"}
-SO_LIB_SUFFIX=${SO_LIB_SUFFIX:-".so"}
-
-if test "$cygwin" = yes; then
-    EXE_SUFFIX=".exe"
-else
-    EXE_SUFFIX=""
-fi
-
-if test "$cygwin" = yes; then
-    WISH="cygwish80.exe"
-else
-    WISH=`which wish`
-fi
-
-if test "x$WISH" = "x"; then
-    AC_MSG_WARN([cannot find wish -- you'll need to manually adjust the Plove script])
-fi
-
-
-#----------------------
-# Read in user settings (and allow override the above settings)
-#----------------------
-. ./configure.user
-
-#----------------------
-# set arch specific flags
-#----------------------
-CFLAGS="$CFLAGS $CFLAGS_ARCH"
 
 #----------------------
 # Checks for standard libraries.
@@ -219,211 +231,145 @@ CFLAGS="$CFLAGS $CFLAGS_ARCH"
 
 SYS_LIBS=""
 
-AC_CHECK_LIB(m, floor,
-   SYS_LIBS="-lm $SYS_LIBS",
-   AC_MSG_WARN([math library (-lm) not found (maybe part of standard C lib?)])
-   )
-
-AC_CHECK_LIB(dl, dlopen,
-   HAVE_DLOPEN=1; SYS_LIBS="-ldl $SYS_LIBS",
-   HAVE_DLOPEN=0; AC_MSG_WARN([dynamic loading of libs not possible (no dlopen() syscall)])
-   )
-if test "$HAVE_DLOPEN" = "1"; then
-   AC_CHECK_HEADER(dlfcn.h, ,
-      HAVE_DLOPEN=0; AC_MSG_WARN([dynamic loading of libs not possible (no dlfcn.h header)])
-   )
+# math functions
+OPP_CHECK_LIB(math, math.h, floor(0), , , math_ok)
+if test $math_ok = no; then
+   OPP_CHECK_LIB(math, math.h, floor(0), , -lm, math_ok, SYS_LIBS="-lm $SYS_LIBS")
+fi
+if test $math_ok = no; then
+   AC_MSG_ERROR([standard C math library -lm not found])
 fi
 
-AC_CHECK_LIB($CXXLIB, main,
-   SYS_LIBS="-l$CXXLIB $SYS_LIBS",
-   AC_MSG_WARN([standard C++ library (-l$CXXLIB) not found; linking problems are likely])
-   )
+# -lstdc++
+OPP_CHECK_LIB(standard C++ lib, iostream, /**/, , -lstdc++, stdcpp_ok, SYS_LIBS="-lstdc++ $SYS_LIBS")
+if test $stdcpp_ok = no; then
+   OPP_CHECK_LIB(standard C++ lib, iostream, /**/, , -lcxx, stdcpp_ok, SYS_LIBS="-lcxx $SYS_LIBS")
+fi
+if test $stdcpp_ok = no; then
+   AC_MSG_ERROR([standard C++ library -lstdc++ or -lcxx not found])
+fi
+
+# dlopen()
+OPP_CHECK_LIB(dlopen, dlfcn.h, dlopen("",0), , , dl_ok)
+if test $dl_ok = no; then
+   OPP_CHECK_LIB(dlopen, dlfcn.h, dlopen("",0), , -ldl, dl_ok, SYS_LIBS="-ldl $SYS_LIBS")
+fi
+if test $dl_ok = yes; then
+   HAVE_DLOPEN=1
+else
+   HAVE_DLOPEN=0
+   AC_MSG_WARN([no dlopen(): dynamic loading of libs not possible])
+fi
+
+#----------------------
+# Check for wish.
+#----------------------
+AC_CHECK_PROGS(WISH, $WISH wish wish84 wish83 wish82 cygwish cygwish84 cygwish83 cygwish82, nope)
+if test "$WISH" = nope -a ! "$PLOVE_EMBED_TCL" = yes; then
+   AC_MSG_WARN([cannot find wish, part of Tcl/Tk - Plove will not work])
+fi
+
+#----------------------
+# Check for Tcl/Tk.
+#----------------------
+OPP_CHECK_LIB(Tcl/Tk, tk.h, Tk_MainLoop(), $TK_CFLAGS, $TK_LIBS, tcltk_ok)
+if test $tcltk_ok = no; then
+    # try to find Tcl/Tk ourselves, but it usually needs to link with Xlib
+    AC_PATH_X
+    if test "$no_x" = "yes"; then
+        opp_x11inc=
+        opp_x11lib=
+    else
+       if test -n "$x_includes"; then
+           opp_x11inc="-I$x_includes"
+       fi
+       if test -n "$x_libraries"; then
+           opp_x11lib="-L$x_libraries -lX11"
+       fi
+    fi
+fi
+if test $tcltk_ok = no -a "$cygwin" = yes; then
+    # in Cygwin, we try 8.4, 8.3 and 8.0:
+    OPP_CHECK_LIB(Tcl/Tk, tk.h, Tk_MainLoop(), $opp_x11inc, $opp_x11lib -lcygtk84 -lcygtcl84, tcltk_ok, TK_LIBS="$opp_x11lib -lcygtk84 -lcygtcl84")
+    if test $tcltk_ok = no; then
+        OPP_CHECK_LIB(Tcl/Tk, tk.h, Tk_MainLoop(), $opp_x11inc, $opp_x11lib -lcygtk83 -lcygtcl83, tcltk_ok, TK_LIBS="$opp_x11lib -lcygtk83 -lcygtcl83")
+    fi
+    if test $tcltk_ok = no; then
+        OPP_CHECK_LIB(Tcl/Tk, tk.h, Tk_MainLoop(), $opp_x11inc, $opp_x11lib -lcygtk80 -lcygtcl80, tcltk_ok, TK_LIBS="$opp_x11lib -lcygtk80 -lcygtcl80")
+    fi
+fi
+if test $tcltk_ok = no; then
+    OPP_CHECK_LIB(Tcl/Tk, tk.h, Tk_MainLoop(), $opp_x11inc, $opp_x11lib -ltk84 -ltcl84, tcltk_ok, TK_LIBS="$opp_x11lib -ltk84 -ltcl84")
+fi
+if test $tcltk_ok = no; then
+    OPP_CHECK_LIB(Tcl/Tk, tk.h, Tk_MainLoop(), $opp_x11inc, $opp_x11lib -ltk83 -ltcl83, tcltk_ok, TK_LIBS="$opp_x11lib -ltk83 -ltcl83")
+fi
+if test $tcltk_ok = no; then
+    OPP_CHECK_LIB(Tcl/Tk, tk.h, Tk_MainLoop(), $opp_x11inc, $opp_x11lib -ltk82 -ltcl82, tcltk_ok, TK_LIBS="$opp_x11lib -ltk82 -ltcl82")
+fi
+if test $tcltk_ok = yes; then
+   TKENV_IF_POSSIBLE=tkenv
+   GNED_IF_POSSIBLE=gned
+   PLOVE_IF_POSSIBLE=plove
+else
+   TKENV_IF_POSSIBLE=missing-library
+   GNED_IF_POSSIBLE=missing-library
+   PLOVE_IF_POSSIBLE=missing-library
+   AC_MSG_ERROR([Tcl/Tk not found, needed for all GUI parts; version 8.2+ needed])
+fi
+
+
 
 #----------------------
 # Check for MPI.
 #----------------------
-
-AC_CHECK_LIB(mpi, MPI_Init,
-   MPI_LIBS="-lmpi -lelan",
-   AC_MSG_WARN([MPI library not installed!])
-   )
-
-dnl FIXME
-if test ! -n "$MPI_CFLAGS"; then
-    AC_MSG_WARN([FIXME: check for presence of MPI headers not implemented!])
+OPP_CHECK_LIB(MPI, mpi.h, MPI_Init(0,0), $MPI_CFLAGS, $MPI_LIBS, mpi_ok)
+if test $mpi_ok = yes; then
+   SIM_MPI_IF_POSSIBLE=sim_mpi
+else
+   SIM_MPI_IF_POSSIBLE=missing-mpi-library
 fi
-
-dnl FIXME
-if test ! -n "$MPI_LIBS"; then
-    AC_MSG_WARN([FIXME: check for presence of MPI libs not implemented!])
-fi
-
 
 #----------------------
 # Check for PVM.
 #----------------------
-
-if test ! -n "$PVM_CFLAGS"; then
-    if test ! -n "$PVM_ROOT"; then
-        AC_MSG_WARN([no PVM_CFLAGS set in configure.user, and no PVM_ROOT environment variable!])
-        AC_MSG_WARN([may run into problems building SIM_PVM!])
-    else
-        PVM_CFLAGS="-I$PVM_ROOT/include"
-    fi
-fi
-
-if test ! -n "$PVM_LIBS"; then
-    # test for -lpvm3 and -lgpvm3 at the same time
-    OPP_CHECK_LIB_WITHPATH(gpvm3, pvm_joingroup, $PVM_ROOT/lib/$PVM_ARCH,
-      PVM_LIBS="$lib_path_switch -lgpvm3 -lpvm3",
-      [PVM_LIBS=""
-       AC_MSG_WARN([if you *do* have PVM3 then set PVM_ROOT and PVM_ARCH...])
-       AC_MSG_WARN([...and re-run configure!])],
-       -lpvm3
-    )
+OPP_CHECK_LIB(PVM, pvm3.h, pvm_joingroup(""), $PVM_CFLAGS, $PVM_LIBS, pvm_ok)
+if test $pvm_ok = yes; then
+   SIM_PVM_IF_POSSIBLE=sim_pvm
+else
+   SIM_PVM_IF_POSSIBLE=missing-pvm-library
 fi
 
 #----------------------
-# Check for Tk.
+# Check for XML parsers: EXPAT and/or LIBXML
 #----------------------
-
-if test ! -n "$TK_CFLAGS"; then
-   # FIXME: non-gcc compilers probably need different flag
-   case "$CXX" in
-      "c++") TK_CFLAGS="-fwritable-strings";;
-      *)     TK_CFLAGS= ;;
-   esac
+OPP_CHECK_LIB(Expat XML parser, expat.h, XML_ParserCreate(0), $EXPAT_CFLAGS, $EXPAT_LIBS, expat_ok)
+OPP_CHECK_LIB(LibXML XML parser, libxml/parser.h, xmlInitParser(), $LIBXML_CFLAGS, $LIBXML_LIBS, libxml_ok)
+if test $libxml_ok = no; then
+    # for Cygwin:
+    OPP_CHECK_LIB(LibXML XML parser, libxml/parser.h, xmlInitParser(), -I/usr/include/libxml2, $LIBXML_LIBS, libxml_ok, LIBXML_CFLAGS=-I/usr/include/libxml2)
 fi
 
-if test ! -n "$TK_LIBS"; then
-
-    # X Window
-    AC_PATH_X
-    if test "$no_x" != "yes"; then
-      if test -n "$x_includes"; then
-        TK_CFLAGS="-I$x_includes $TK_CFLAGS"
-      fi
-      if test -n "$x_libraries"; then
-        TK_LIBS="-L$x_libraries -lX11 $TK_LIBS"
-      fi
-    fi
-
-    # try to find Tcl/Tk libraries in different versions (80 is for cygwin)
-    tcltk_found=
-    for ver in '' 8.4 8.3 8.2 8.1 8.0 80; do
-      # here we check for Tcl only, Tk we'll see later
-      OPP_CHECK_LIB_WITHPATH(tcl$ver, Tcl_Main, /opt/lib,
-                        TK_LIBS="$lib_path_switch -ltk$ver -ltcl$ver $TK_LIBS"
-                        tcltk_found=yes,
-                        :,
-                        $TK_LIBS $SYS_LIBS)
-      if test -n "$tcltk_found"; then
-        break
-      fi
-    done
-
-    # now we verify that we have a matching Tk; if not, clear the tcltk_found flag
-    if test "$tcltk_found" = "yes"; then
-      OPP_CHECK_LIB_WITHPATH(tk$ver, Tk_BindEvent,,
-                        :,
-                        tcltk_found=,
-                        $TK_LIBS $SYS_LIBS)
-    fi
-
-    if test "$tcltk_found" != "yes"; then
-       AC_MSG_WARN([no Tcl/Tk libraries found, needed for GNED, Tkenv and Plove!])
-       AC_MSG_WARN([if you *do* have Tcl/Tk then edit TK_CFLAGS and TK_LIBS...])
-       AC_MSG_WARN([...in configure.user and re-run configure!])
-       TK_LIBS="-ltk -ltcl $TK_LIBS"
-    fi
-fi
-
-#----------------------
-# Check for EXPAT header and lib
-#----------------------
-
-if test ! -n "$EXPAT_LIBS"; then
-   EXPAT_LIBS=-lexpat
-fi
-
-opp_save_CFLAGS=$CFLAGS
-CFLAGS="$EXPAT_CFLAGS $CFLAGS"
-AC_CHECK_HEADER(expat.h, ,
-   NO_EXPAT=1
-   AC_MSG_WARN(Expat header not found. If you *do* have Expat then set EXPAT_CFLAGS!)
-   )
-
-CFLAGS=$opp_save_CFLAGS
-
-# FIXME this ignores the EXPAT_LIBS variable
-AC_CHECK_LIB(expat, XML_ParserCreate, ,
-   NO_EXPAT=1
-   AC_MSG_WARN([Expat library not found.]), )
-
-#----------------------
-# Check for LIBXML header and lib
-#----------------------
-
-if test ! -n "$NEDXML_LIBS"; then
-   LIBXML_LIBS=-lxml2
-fi
-
-opp_save_CFLAGS=$CFLAGS
-CFLAGS="$LIBXML_CFLAGS $CFLAGS"
-AC_CHECK_HEADER(libxml/parser.h, ,
-   NO_LIBXML=1
-   AC_MSG_WARN(LIBXML header not found. If you *do* have LIBXML then set LIBXML_CFLAGS!)
-   )
-CFLAGS=$opp_save_CFLAGS
-
-# FIXME this ignores the LIBXML_LIBS variable
-AC_CHECK_LIB(xml2, xmlParseChunk, ,
-   NO_LIBXML=1
-   AC_MSG_WARN([LIBXML library not found.])
-   , )
-
-#----------------------
-# Choose between Expat and LIBXML.
-#----------------------
-
-if test "x$NO_EXPAT" != "x1"; then
+if test $expat_ok = yes; then
    AC_MSG_NOTICE([Using Expat for XML parsing in NEDXML.])
    XMLPARSER=expat
    XML_CFLAGS=$EXPAT_CFLAGS
    XML_LIBS=$EXPAT_LIBS
-elif test "x$NO_LIBXML" != "x1"; then
+elif test $libxml_ok = yes; then
    AC_MSG_NOTICE([Using LIBXML for XML parsing in NEDXML.])
    XMLPARSER=libxml
    XML_CFLAGS=$LIBXML_CFLAGS
    XML_LIBS=$LIBXML_LIBS
 else
    XMLPARSER=none
-   AC_MSG_WARN([No suitable XML parser -- NEDXML and NEDTOOL won't support XML input.])
+   AC_MSG_WARN([No suitable XML parser: nedtool and NEDXML lib won't support XML input])
 fi
 
 #----------------------
 # Check for Akaroa header and lib
 #----------------------
-
-if test ! -n "$AKAROA_LIBS"; then
-   AKAROA_LIBS=-lakaroa
-fi
-
-opp_save_CFLAGS=$CFLAGS
-CFLAGS="$AKAROA_CFLAGS $CFLAGS"
-AC_CHECK_HEADER(akaroa.H, ,
-   NO_AKAROA=1
-   AC_MSG_WARN([Akaroa header not found. If you *do* have Akaroa installed then add the include path to AKAROA_CFLAGS.])
-   , )
-CFLAGS=$opp_save_CFLAGS
-
-# FIXME this ignores the AKAROA_LIBS variable
-AC_CHECK_LIB(akaroa, AkDeclareParameters, ,
-   NO_AKAROA=1
-   AC_MSG_WARN([Akaroa library not found.])
-   , )
-
-if test "x$NO_AKAROA" != "x1"; then
+OPP_CHECK_LIB(Akaroa, akaroa.H, AkObservation(0.0), $AKAROA_CFLAGS, $AKAROA_LIBS, akaroa_ok)
+if test $akaroa_ok = yes; then
    CFLAGS="$CFLAGS -DWITH_AKAROA"
    SYS_LIBS="$SYS_LIBS $AKAROA_LIBS"
 fi
@@ -461,30 +407,6 @@ else
 fi
 
 #----------------------
-# Conditional build of some components
-#----------------------
-
-if test -n "$MPI_LIBS"; then
-   SIM_MPI_IF_POSSIBLE=sim_mpi
-else
-   SIM_MPI_IF_POSSIBLE=missing-mpi-library
-fi
-
-if test -n "$PVM_LIBS"; then
-   SIM_PVM_IF_POSSIBLE=sim_pvm
-else
-   SIM_PVM_IF_POSSIBLE=missing-pvm-library
-fi
-
-if test -n "$TK_LIBS"; then
-   TKENV_IF_POSSIBLE=tkenv
-   GNED_IF_POSSIBLE=gned
-else
-   TKENV_IF_POSSIBLE=missing-library
-   GNED_IF_POSSIBLE=missing-library
-fi
-
-#----------------------
 # Tcl code embedding.
 #----------------------
 
@@ -506,22 +428,6 @@ elif test "$cygwin" = yes; then
    PLOVE_VARIANT=plove-cyg
 else
    PLOVE_VARIANT=plove-sh
-fi
-
-#----------------------
-# Feature tests
-#----------------------
-
-# experimental subclassing
-AC_ARG_ENABLE(nedc-subcl,
-[  --enable-nedc-subcl     NO LONGER NECESSARY, see doc/subclassing.txt],
-[case "${enableval}" in
-   yes|no) ;;
-   *)      AC_MSG_ERROR([bad value ${enableval} for nedc-subcl option]) ;;
- esac],
-              [enableval=no])
-if test "${enableval}" = yes; then
-    echo "WARNING: --enable-nedc-subcl option no longer necessary: subclassing support is enabled by default, although with different usage, see doc/subclassing!" 1>&2
 fi
 
 
@@ -617,9 +523,10 @@ AC_SUBST(AKAROA_CFLAGS)
 AC_SUBST(AKAROA_LIBS)
 
 AC_SUBST(TKENV_IF_POSSIBLE)
+AC_SUBST(GNED_IF_POSSIBLE)
+AC_SUBST(PLOVE_IF_POSSIBLE)
 AC_SUBST(SIM_PVM_IF_POSSIBLE)
 AC_SUBST(SIM_MPI_IF_POSSIBLE)
-AC_SUBST(GNED_IF_POSSIBLE)
 
 AC_SUBST(TKENV_EMBED_SUFFIX)
 AC_SUBST(GNED_EMBED_SUFFIX)
@@ -634,7 +541,7 @@ AC_SUBST(OMNETPP_PLOVE_DIR)
 #
 # Generate files
 #
-AC_OUTPUT()
+AC_OUTPUT
 
 chmod +x src/utils/opp_makemake
 chmod +x src/utils/opp_test
